--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <version>2.4.0</version>
     </parent>
     <artifactId>kafka-connect-opentsdb</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.1-SNAPSHOT</version>
     <name>kafka-connect-opentsdb</name>
     <description>A Kafka Connect connector receiving data from example.</description>
     <url>https://github.com/jcustenborder/kafka-connect-opentsdb</url>
@@ -63,28 +63,6 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>com.github.jcustenborder.maven.plugins</groupId>
-                <artifactId>kafka-connect-maven-plugin</artifactId>
-                <version>0.1.2</version>
-                <executions>
-                    <execution>
-                        <id>generate-config</id>
-                        <goals>
-                            <goal>generate-config-classes</goal>
-                        </goals>
-                        <phase>generate-sources</phase>
-                        <configuration>
-                            <includeFiles>
-                                <includeFile>src/main/connect-config-classes/*.json</includeFile>
-                            </includeFiles>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <!--
-            Uncomment to prepare a package for the Confluent Hub.
-            <plugin>
                 <groupId>io.confluent</groupId>
                 <artifactId>kafka-connect-maven-plugin</artifactId>
                 <configuration>
@@ -93,14 +71,14 @@
                     </documentationUrl>
                     <componentTypes>
                         <componentType>sink</componentType>
+                        <componentType>transform</componentType>
                     </componentTypes>
                     <tags>
-                        <tag>Redis</tag>
+                        <tag>OpenTSDB</tag>
                     </tags>
-                    <title>Kafka Connect Redis</title>
+                    <title>Kafka Connect OpenTSDB</title>
                 </configuration>
             </plugin>
-            -->
         </plugins>
     </build>
 </project>
